--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.468.0",
     "mailtrap": "^3.4.0",
     "next": "15.1.2",
